--- a/reg.html
+++ b/reg.html
@@ -1,5 +1,9 @@
+<!doctype html>
+<html lang="en">
 <html>
   <head>
+	 <meta name="viewport" conten="width=device-width" initial-scale=1.0" > 
+	  
      <title>form</title>
 	 <style>
 	   body{
